--- a/吴雨锡作业0421/index.html
+++ b/吴雨锡作业0421/index.html
@@ -12,21 +12,21 @@
     <div id="box">
         <!-- box是可视窗口 -->
         <ul class="list">
-            <li><img src="C:\Users\Administrator\Pictures\动物\1_179225_c6b5053a5993c29.jpg"></li>
+            <li><img src="images/1_179225_c6b5053a5993c29.jpg"></li>
             <li>
-                <img src="C:\Users\Administrator\Pictures\动物\20120620130310.jpg" alt="" srcset="">
+                <img src="images/20120620130310.jpg" alt="" srcset="">
             </li>
             <li>
-                <img src="C:\Users\Administrator\Pictures\动物\2016082111113732402.jpg" alt="" srcset="">
+                <img src="images/b2a2f7f9773b44bdae626fabe1ef5b93_th.jpg" alt="" srcset="">
             </li>
             <li>
-                <img src="C:\Users\Administrator\Pictures\动物\b2a2f7f9773b44bdae626fabe1ef5b93_th.jpg" alt="" srcset="">
+                <img src="images/t01c239a243c3f3eda9.jpg" alt="" srcset="">
             </li>
             <li>
-                <img src="C:\Users\Administrator\Pictures\动物\VCG111156057045.jpg" alt="" srcset="">
+                <img src="images/t01d21e32fec8716c2e.webp" alt="" srcset="">
             </li>
             <li>
-                <img src="C:\Users\Administrator\Pictures\动物\1_179225_c6b5053a5993c29.jpg" alt="" srcset="">
+                <img src="images/1_179225_c6b5053a5993c29.jpg" alt="" srcset="">
             </li>
         </ul>
         <div class="btn_box">
